@@ -2,6 +2,7 @@ package com.mygdx.actors.tiles;
 
 
 import com.badlogic.gdx.math.Rectangle;
+import com.mygdx.actors.towers.Tower;
 
 public class Tile {
 
@@ -9,26 +10,32 @@ public class Tile {
     private Type type;
     private Rectangle hitbox;
 
+    private Tower tower;
+
     public Tile(Direction direction, Type type, Rectangle hitbox) {
         this.direction = direction;
         this.type = type;
         this.hitbox = hitbox;
+
+        tower = null;
+    }
+
+    public void onClick(){
+        if (type == Type.FUNDATION && tower == null){
+            
+        }
+
+        if (type == Type.FUNDATION && tower != null){
+
+        }
     }
 
     public Direction getDirection() {
         return direction;
     }
 
-    public void setDirection(Direction direction) {
-        this.direction = direction;
-    }
-
     public Type getType() {
         return type;
-    }
-
-    public void setType(Type type) {
-        this.type = type;
     }
 
     public Rectangle getHitbox() {
@@ -37,5 +44,21 @@ public class Tile {
 
     public void setHitbox(Rectangle hitbox) {
         this.hitbox = hitbox;
+    }
+
+    public boolean isFundation() {
+        if (type == Type.FUNDATION){
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    public Tower getTower() {
+        return tower;
+    }
+
+    public void setTower(Tower tower) {
+        this.tower = tower;
     }
 }
