@@ -29,3 +29,8 @@
     Probando la velocidad de los enemigos hasta encontrar el balance correcto.
     Hay que hacer limpieza del código, las variables están en público y privado sin mucho sentido.
     Los proyectiles de las torres presentan un nuevo desafío. Debo pensar como plantearlo.
+23/01/23
+    Spritesheets para todos los enemigos.
+    Nueva clase WaveManager para gestionar comodamente las oleadas.
+    Los enemigos ahora desaparecen al llegar al final del nivel.
+    Limpieza general de código en las clases de Enemy y derivadas.
